fix jdbc database url parsing

--- a/resources/leiningen/new/compojure_api_chassis/Procfile
+++ b/resources/leiningen/new/compojure_api_chassis/Procfile
@@ -1,4 +1,4 @@
 web: java $JVM_OPTS -jar target/{{name}}.jar
 {{#pgsql-hook?}}
-release: lein migratus migrate
+release: lein migrations migrate
 {{/pgsql-hook?}}
