--- a/resources/leiningen/new/compojure_api_chassis/Procfile
+++ b/resources/leiningen/new/compojure_api_chassis/Procfile
@@ -1,4 +1,4 @@
-web: java $JVM_OPTS -jar target/{{name}}.jar
+web: java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap $JAVA_TOOL_OPTIONS -jar target/{{name}}.jar
 {{#pgsql-hook?}}
-release: lein migrations migrate
+release: JAVA_OPTS=$JAVA_TOOL_OPTIONS lein migrations migrate
 {{/pgsql-hook?}}
